objects/ClientScorecard__c.object
<CustomObject>
    <fields>
        <fullName>Client_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of client contact</description>
        <label>Client Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Client Scorecards</relationshipLabel>
        <relationshipName>Client_Scorecards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Concerns_Risks__c</fullName>
        <label>Concerns / Risks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>General_Account_Updates__c</fullName>
        <label>General Account Updates</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Goals_For_The_Week__c</fullName>
        <label>Goals For The Week</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Performance_Updates__c</fullName>
        <label>Performance Updates</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Relationship</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>YBN Master Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Client Scorecards</relationshipLabel>
        <relationshipName>Client_Scorecards</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>YBN_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>YBN Exec who called the client</description>
        <label>YBN Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Client_Scorecards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_your_YBN_team_exceeding_your_expectat__c</fullName>
        <description>1 = lowest level of satisfaction and 5 = the highest level of satisfaction</description>
        <inlineHelpText>Is your YBN team exceeding your expectations with regard to service and industry excellence?</inlineHelpText>
        <label>YBN team exceeding expectations</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Willingness_to_Retain_YBN_Relationship__c</fullName>
        <description>1 = lowest level of satisfaction and 5 = highest level of satisfaction</description>
        <inlineHelpText>Is there any reason you would not support a continued relationship with YBN?</inlineHelpText>
        <label>Willingness to Retain YBN Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>s_YBN_exceeding_your_expectations_regard__c</fullName>
        <description>1 = the lowest level of satisfaction and 5 = the highest level of satisfaction</description>
        <inlineHelpText>Is YBN exceeding your expectations regarding ROI?</inlineHelpText>
        <label>YBN exceeding ROI Expectations</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>Used to provide notes and updates on certain clients or relationships.</description>
    <label>Client Scorecard</label>
    <nameField>
        <displayFormat>SC-{000000}</displayFormat>
        <label>Scorecard Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Scorecards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>